# TOHA-ACL-2026

./: .gitignore  README.md  pyproject.toml  run_mtopdiv.py  run_redeep.py  run_unsupervised.py  traditional_distances.py
config/: mtopdiv.yaml  redeep.yaml  unsupervised.yaml
config/evaluation/: default.yaml
config/method/: haloscope.yaml  inside.yaml  mtopdiv.yaml  redeep.yaml  selfcheckgpt_nli.yaml  semantic_entropy.yaml
config/preprocess/: hotpot_qa.yaml  ragtruth.yaml  ragtruth_data2txt.yaml  ragtruth_qa.yaml  ragtruth_summ.yaml
config/transfer/: hotpot_qa.yaml  ragtruth.yaml  ragtruth_data2txt.yaml  ragtruth_qa.yaml  ragtruth_summ.yaml
container_setups/: Dockerfile  credentials  environment.yml  launch_container  requirements.txt
haloscope/: README.md  bg_coqa_bleurt_score.npy  gather_dataset.ipynb  hal_det_llama.py  linear_probe.py  ml_coqa_bleurt_score.npy
haloscope/coqa_dataset/: state.json
scripts/: generate_dataset.py  generate_xsum.py  gpt_generation.py  parse_coqa.py  plot_case_study.py  run_generation.sh  time_eval.py  utils.py
src/evaluation/: evaluation.py
src/methods/: __init__.py  caching_utils.py  extract_states.py  hallucination_detection_abc.py  llm_base.py  performance_monitor.py
src/methods/haloscope/: haloscope_detector.py
src/methods/inside/: inside.py
src/methods/llm_check/: llm_check.py
src/methods/mtopdiv/: mtopdiv.py  utils.py
src/methods/perplexity/: perplexity.py
src/preprocess/: PreprocessCoQA.py  PreprocessHotpotQA.py  PreprocessRAGTruth.py  PreprocessSQuAD.py  PreprocessXSum.py  __init__.py
(+6 files in other folders)
