[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
  "W"    # pycodestyle
]

ignore = [
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[project]
version = "2025.0.0"
name="src"